--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-    "name": "Spotify Playlists",
-    "version": "0.1",
+    "name": "spotify_playlists",
+    "version": "0.1.0",
     "description": "Reads and displays Spotify playlists of the current user",
+    "license": "GPL-3.0",
+    "homepage": "https://github.com/isemench/spotify_my_playlists",
     "main": "app.js",
     "author": {
         "name": "Igor Semenchukov",
         "email": "igor.semenchukov@gmail.com"
     },
+    "repository": "github:isemench/spotify_my_playlists",
     "dependencies": {
-        "express": "^4.17.1"
+        "cookie-parser": "^1.4.4",
+        "express": "^4.17.1",
+        "request": "^2.88.0"
     }
 }
